WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
81474
Fix compile when FULLSCREEN_API is not enabled on Mac
https://bugs.webkit.org/show_bug.cgi?id=81474
Summary
Fix compile when FULLSCREEN_API is not enabled on Mac
Pratik Solanki
Reported
2012-03-18 11:47:55 PDT
Build fails if FULLSCREEN_API is not enabled on mac. We should guard the code inside ENABLE(FULLSCREEN_API).
Attachments
Patch
(2.05 KB, patch)
2012-03-18 11:50 PDT
,
Pratik Solanki
adachan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2012-03-18 11:50:05 PDT
Created
attachment 132500
[details]
Patch
Ada Chan
Comment 2
2012-03-18 11:59:24 PDT
Comment on
attachment 132500
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132500&action=review
> Source/WebCore/platform/mac/WebCoreFullScreenWindow.mm:29 > +#if ENABLE(FULLSCREEN_API)
Can '#import "WebCoreFullScreenWindow.h"' be placed inside the #if ENABLE(FULLSCREEN_API) block?
Pratik Solanki
Comment 3
2012-03-18 12:10:37 PDT
Comment on
attachment 132500
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=132500&action=review
>> Source/WebCore/platform/mac/WebCoreFullScreenWindow.mm:29 >> +#if ENABLE(FULLSCREEN_API) > > Can '#import "WebCoreFullScreenWindow.h"' be placed inside the #if ENABLE(FULLSCREEN_API) block?
Yeah, it probably should. I will make that change before committing. Thanks for the review.
Pratik Solanki
Comment 4
2012-03-18 12:17:34 PDT
Committed
r111135
: <
http://trac.webkit.org/changeset/111135
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug