Fix compile when FULLSCREEN_API is not enabled on Mac https://bugs.webkit.org/show_bug.cgi?id=81474

Reviewed by Ada Chan.

Guard the full screen api code inside ENABLE(FULLSCREEN_API).

No new tests because no functional changes.

* platform/mac/WebCoreFullScreenWindow.h:
* platform/mac/WebCoreFullScreenWindow.mm:

Canonical link: https://commits.webkit.org/98679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111135 268f45cc-cd09-0410-ab3c-d52691b4dbfc